cabal-version:      3.0
name:               HyFM
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Zhangfan Li
maintainer:         zhangfan.li@acm.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.Functor.HyFM.Hylos,
        Data.Functor.HyFM.Fusion,
        Data.Functor.HyFM.Zoo,
        Data.Functor.HyFM.Memo
    build-depends:
        base ^>=4.17.2.1,
        transformers ^>=0.6.2.0,
        containers ^>=0.7
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -O2

common test-opts
    ghc-options: -O2 -ddump-simpl -dsuppress-all -ddump-to-file
                 -fspec-constr-keen -fspecialise-aggressively

test-suite HyFM-FW-TestSt0
    import:           warnings, test-opts
    default-language: GHC2021
    other-modules:
        FloydWarshall,
        Collections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/FloydWarshall
    main-is:          TestSt0.hs
    build-depends:
        base ^>=4.17.2.1,
        HyFM,
        template-haskell ^>=2.19.0.0,
        vector ^>=0.13.2.0,
        matrix ^>=0.3.6.4,
        transformers ^>=0.6.2.0,
        hspec ^>=2.11.14

test-suite HyFM-FW-BenSt0PrStat
    import:           warnings, test-opts
    default-language: GHC2021
    other-modules:
        FloydWarshall,
        Collections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/FloydWarshall
    main-is:          BenSt0PrStat.hs
    build-depends:
        base ^>=4.17.2.1,
        HyFM,
        template-haskell ^>=2.19.0.0,
        vector ^>=0.13.2.0,
        matrix ^>=0.3.6.4,
        transformers ^>=0.6.2.0,
        criterion

test-suite HyFM-FW-BenSt0PrComp
    import:           warnings, test-opts
    default-language: GHC2021
    other-modules:
        FloydWarshall,
        Collections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/FloydWarshall
    main-is:          BenSt0PrComp.hs
    build-depends:
        base ^>=4.17.2.1,
        HyFM,
        template-haskell ^>=2.19.0.0,
        vector ^>=0.13.2.0,
        matrix ^>=0.3.6.4,
        transformers ^>=0.6.2.0,
        criterion

test-suite HyFM-FW-BenSt0MonStat
    import:           warnings, test-opts
    default-language: GHC2021
    other-modules:
        FloydWarshall,
        Collections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/FloydWarshall
    main-is:          BenSt0MonStat.hs
    build-depends:
        base ^>=4.17.2.1,
        HyFM,
        template-haskell ^>=2.19.0.0,
        vector ^>=0.13.2.0,
        matrix ^>=0.3.6.4,
        transformers ^>=0.6.2.0,
        criterion

test-suite HyFM-FW-BenSt0MonComp
    import:           warnings, test-opts
    default-language: GHC2021
    other-modules:
        FloydWarshall,
        Collections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/FloydWarshall
    main-is:          BenSt0MonComp.hs
    build-depends:
        base ^>=4.17.2.1,
        HyFM,
        template-haskell ^>=2.19.0.0,
        vector ^>=0.13.2.0,
        matrix ^>=0.3.6.4,
        transformers ^>=0.6.2.0,
        criterion
